fixed and clean code for prepare to use coroutines

--- a/app/src/main/res/layout/fragment_plan_item.xml
+++ b/app/src/main/res/layout/fragment_plan_item.xml
@@ -57,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/et_count_value"
                 android:inputType="number"
-                android:text="@{String.valueOf(viewModel.planItem.data)}"
+                android:text="@{String.valueOf(viewModel.planItem.count)}"
                 tools:ignore="TextContrastCheck" />
         </com.google.android.material.textfield.TextInputLayout>
 
